# LiveStreamingPlatform

./: README.md
LiveStreamingPlatform/: CMakeLists.txt  main.cpp  main.qml  rtmpstreamer.cpp  rtmpstreamer.h
LiveStreamingPlatform/audiorecord/: audiorecorderabstract.h  audiorecorderfactory.cpp  audiorecorderfactory.h  qtaudiorecorder.cpp  qtaudiorecorder.h
LiveStreamingPlatform/beautify/: bilateralfilter.cpp  bilateralfilter.h  filter.cpp  filter.h
LiveStreamingPlatform/codec/: ffmpegencoder.cpp  ffmpegencoder.h  mediaencoderabstract.h  mediaencoderfactory.cpp  mediaencoderfactory.h
LiveStreamingPlatform/controller/: controller.cpp  controller.h
LiveStreamingPlatform/data/: data.cpp  data.h  datamanager.cpp  datamanager.h
LiveStreamingPlatform/streaming/: rtmpmodule.cpp  rtmpmodule.h
LiveStreamingPlatform/videocapture/: opencvvideocapture.cpp  opencvvideocapture.h  videocaptureabstract.h  videocapturefactory.cpp  videocapturefactory.h
